# cs-fhe

./: .gitignore  README.md  pyproject.toml
cs_fhe/: interface.py
cs_fhe/circuits/: __init__.py  cs.py
cs_fhe/simulation/: client.py  server.py
rust/fhe/: Cargo.toml
rust/fhe/src/: fhe.rs  main.rs
scripts/: test_compile_circuit.py  test_concrete.py  test_mpc.py  test_simulation.py
